<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/feedback_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_feedback"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/cyan"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/feedback_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_feedback"
        android:gravity="top"
        android:background="@android:drawable/edit_text"
        android:padding="12dp"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:maxLines="15"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="10dp"/>

    <Button
        android:id="@+id/submit_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="submitFeedback"
        android:background="@drawable/button_bg_blue"/>
</LinearLayout>
