<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/alarm_details_bg">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/stick" />

    <EditText
        android:id="@+id/location_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location_name_et_hint"
        android:maxLines="2"
        android:textSize="20sp"
        android:textColorHint="#898888"
        android:textColor="@color/white"
        android:layout_marginVertical="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp">

        <EditText
            android:id="@+id/distance_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/distance_et_hint"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="@color/white"
            android:textColorHint="#898888"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/meter_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(m)"
            android:textSize="18sp"
            android:textColor="#898888"/>

    </LinearLayout>

    <Switch
        android:id="@+id/one_time_sw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/one_time_sw"
        android:textColor="@color/white"
        android:paddingStart="5dp"
        tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/save_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/save_bt"
        android:background="@drawable/button_bg_blue"/>

</LinearLayout>