<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_bg"
    android:padding="15dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp">

        <ImageView
            android:id="@+id/iv_1"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/baseline_play_arrow_35"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popup_name"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/iv_1"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp">

        <ImageView
            android:id="@+id/iv_2"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/baseline_play_arrow_35"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popup_distance"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/iv_2"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp">

        <ImageView
            android:id="@+id/iv_3"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/baseline_play_arrow_35"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popup_distance_def"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/iv_3"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp">

        <ImageView
            android:id="@+id/iv_4"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/baseline_play_arrow_35"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popup_one_time"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/iv_4"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/ok_tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"/>

</LinearLayout>